--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="row">
         <div class="col s12 grey lighten-3" ng-controller="DroidController as droidCtrl">
-            <h3></h3>
+            <h3>Provider</h3>
             <div class="card-panel">
                 <p class="flow-text">
                 {{droidCtrl.message}}
